# pro-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HARNESS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: discover-missing-features.prompt.md
.harness/: schema.json  task.example.json
docs/: CONTRIBUTING.md
docs/rfcs/: README.md
docs/superpowers/plans/: 2026-07-11-install-claude-plugins.md  2026-07-11-manual-distill-plan.md  2026-07-11-open-source-roadmap-tracking.md  2026-07-11-universal-ai-harness.md  2026-07-12-discovering-missing-features.md  2026-07-12-linkedin-profile.md  2026-07-12-skill-distillation-template.md
docs/superpowers/specs/: 2026-07-11-install-claude-plugins-design.md  2026-07-11-manual-distill-design.md  2026-07-11-open-source-roadmap-design.md  2026-07-11-universal-ai-harness-design.md  2026-07-12-discovering-missing-features-design.md  2026-07-12-linkedin-profile-design.md  (+1 more)
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/tests/: e2e.spec.ts
init/: resume.md
jobs/: python-docker-expert-CV.md  software_engineer_data_backend_ad_cloud-CV.md
scripts/: harness.py
src/pro_copilot/: __init__.py  cli.py  config.py  database.py  main.py  models.py  scheduler.py
tests/: test_harness.py
tests/api/: test_linkedin.py
tests/services/: test_distiller.py
vault/: linkedin_profile.json
vault/skills/: 2_技能與貢獻分析.md  3_技能檔案操作判定.md  ai應用與_rag.md  docker_docker_compose.md  net_c_後端開發.md  nextjs_react.md  postgresql.md  python_fastapi.md  技能_wiki_架構概要.md  數據工程.md  檢索增強生成_rag_系統.md  程式開發.md  系統分析與架構設計_system_design_technical_specification.md  系統部署.md
(+17 files in other folders)
