[project]
name = "pro-copilot"
version = "1.0.0"
description = "AI 職涯副駕駛 - 自動蒸餾工作足跡為 Obsidian 技能 wiki 並生成客製履歷"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.9",
    "httpx>=0.28",
    "google-antigravity>=0.1.6",
    "openai>=1.82",
    "python-telegram-bot>=22",
    "google-api-python-client>=2.172",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "apscheduler>=3.11",
    "click>=8.1",
    "python-dotenv>=1.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
pro-copilot = "pro_copilot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pro_copilot"]
